# kollab

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .vulture-whitelist.py  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  SECURITY.md  SUPPORT.md  install.sh  kollabor_cli_main.py  main.py  package.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: setup-branch-protection.sh
.github/workflows/: ci.yml  publish.yml
bundles/agents/: __init__.py
bundles/data/: models.json
bundles/layouts/: README.md  compact.json  default.json  developer.json
bundles/themes/: README.md  autumn.json  spring.json  summer.json  winter.json
bundles/widgets/: README.md  branch-status.sh  clock.sh  date.sh  files-changed.sh  last-commit.sh  life-bar.sh  motivation.sh  pomodoro.sh  session-time.sh  uptime.sh  weather.sh
docs/: COST-CALCULATOR-SPEC.md  README.md  configuration.md  faq.md  getting-started.md  one-pager.md  providers.md  release-process.md  troubleshooting.md
docs/architecture/: README.md  architecture-overview.md  event-system-architecture.md  terminal-rendering-architecture.md  tool-calling-architecture.md
docs/blog/: how-the-hub-was-born.md  killing-the-dual-pipeline.md
docs/features/: agents.md  attach-mode.md  config-hooks.md  context-compaction-forked-file-aware-spec.md  context-service.md  conversations.md  dynamic-system-prompts.md  kollaborate.md  mcp.md  permissions.md  pipe-mode.md  profiles.md  question-gate-protocol.md  slash-commands.md  tasks.md  theming.md  tmux.md  tools.md
docs/guides/: docker-runtime.md  hub-quick-start.md  telegram-bridge-setup.md
docs/mcp/: MCP_SERVER_EXAMPLES.md  MCP_SETUP.md  local-server-connection-fix.md  mcp_settings.example.json
docs/plugins/: development.md  hooks-reference.md  overview.md
docs/reference/: commands.md  conversation-jsonl-schema.md  conversation-pipeline.md  env-vars.md  frontier-models-2026.md  hub-socket-protocol.md
docs/research/: 2026-05-19-cli-harness-ux-code-gap-matrix.md  2026-05-19-cli-harness-ux-implementation-slices.md
docs/specs/: 2026-05-20-attach-cleanup-prd.md  2026-05-20-compact-preview-finish-prd.md  2026-05-20-hub-cockpit-prd.md  2026-05-20-hub-runtime-split-prd.md  2026-05-20-runtime-smoke-prd.md  2026-05-20-tool-timeline-ui-prd.md  crystal-memory-xml-tags.md  daemon-first-architecture.md  hub-coordinator-routing.md  hub-message-flow.md  message-schema.md  secrets-management.md  unified-tool-pipeline.md
homebrew-tap/: README.md  update-formula.sh
known_issues/: AGENT_WORKFLOW.md  RESUME_FIX_WORKING_DOC.md
kollabor/: __init__.py  application.py  attach_client.py  cli.py  config_hooks.py  daemon.py  hub_env.py  quotes.py  tool_contract_proof.py  version.py
kollabor/altview/: command_integration.py
kollabor/commands/: __init__.py  executor.py  mcp_command.py  parser.py  profile_command.py  registry.py  ui_commands.py
kollabor/fullscreen/: command_integration.py
kollabor/llm/: __init__.py  agent_hud.py  hook_system.py  llm_coordinator.py  message_handler.py  session_manager.py  session_resume.py  status_service.py  streaming_handler.py  system_messages.py
kollabor/logging/: __init__.py  setup.py
kollabor/state/: __init__.py  context.py  context_registry.py  handlers.py  hub_client.py  interface.py  local.py  refresher.py  remote.py  snapshots.py  widget_state.py
kollabor/updates/: CHANGELOG.md  __init__.py  (+5 more)
outputs/: dedup-report.md
plugins/: __init__.py  agent_orchestrator_plugin.py  context_compaction_plugin.py  context_service_plugin.py  env_queue_plugin.py  example_context_plugin.py  hook_monitoring_plugin.py  mcp_plugin.py  mcp_status_plugin.py  modern_input_plugin.py  resume_conversation_plugin.py  save_conversation_plugin.py  terminal_altview.py  terminal_plugin.py
scripts/: build_dedup_report.py  capture-readme-demo.zsh  clean.py  dedup_workflow.js  detect_dead_code.py  docker-runtime.sh  docs-check.py  find_dupes.py  homebrew_smoke_test.sh  jsonl_to_markdown.py  preview-modern-ui.py  preview-smooth-gradients.py  publish.py  repair_crystal_summaries.py  smoke_test.sh  stabilization-gate.sh  test_mcp_local_fix.py  trash.sh  validate_bundled_agent_skills.py  validate_models.py  view_raw_conversations.sh
tests/: INTERACTIVE_STATUS_WIDGETS_TEST_PLAN.md  README.md  run_tests.py  test_0.5.5.py  test_0_5_5.py  test_engine_health_api.py  test_hub_modules.py  test_hub_roster_inject.py  test_hub_rpc_integration.py  test_peer_credentials.py
(+579 files in other folders)
